cmake_minimum_required(VERSION 2.6)
project(tests)
find_package(Threads)
include_directories(../gtest/include)
link_directories(../mybuild)
add_executable(tests test_trivial.cpp)
target_link_libraries(tests gtest gtest_main)
target_link_libraries(tests ${CMAKE_THREAD_LIBS_INIT})
add_test(NAME tests COMMAND tests)
